--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,6 @@
 <h1>gz-exobit Web Component Demo.</h1>
 
 <gz-exobit data-key="demo" data-slowmo="2" data-size="512"></gz-exobit>
+<gz-exobit data-uri="https://gateway.pinata.cloud/ipfs/QmPfKjX14CDY5VfsebwMJfGjujSJtGzASbcCRgEZ5x2yuw" data-slowmo="2" data-size="512"></gz-exobit>
 
 <script type="module" src="../index.js"></script>
