--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <h1>gz-exobit Web Component Demo.</h1>
 
-<gz-exobit data-key="demo" data-slowmo="2" data-size="256"></gz-exobit>
+<gz-exobit data-key="demo"></gz-exobit>
 <gz-exobit data-uri="https://ipfs.io/ipfs/QmPfKjX14CDY5VfsebwMJfGjujSJtGzASbcCRgEZ5x2yuw" data-slowmo="2" data-size="256"></gz-exobit>
 <gz-exobit data-uri="https://ipfs.io/ipfs/QmQ7nSp4UE22sgGbELoy9pE9b9hbANSHK74YuaHpqVzCbZ" data-slowmo="2" data-size="256"></gz-exobit>
 <gz-exobit data-uri="https://ipfs.io/ipfs/QmTMzVy8hiuBJzrXYDSzLc7CCRrPMJ5DhXcdAWaZD723b4" data-slowmo="2" data-size="256"></gz-exobit>
